# fastapi_2

./: docker-compose.yml  main.py  pyproject.toml
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
migrations/: env.py
migrations/versions/: 2bb4e64d42e9_init.py  4b2f6354b48a_add_table_user.py  a9c8c68935ef_init.py  c9c369ea1cc2_init.py  d16c2b68ae1f_init.py
src/conf/: config.py
src/database/: db.py
src/emtity/: models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py
src/schemas/: contact.py  users.py
src/services/: auth.py  email.py
tests/: tests_unitest.py  tests_urls.py
